--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,9 +31,9 @@
                 <div class="lg:w-1/2">
                    <div class="lg:ml-8">
                     <p class="text-white lg:text-left text-center  font-bold text-2xl">REQUEST CALL</p>
-                     <img src="/request.png" alt="">
+                     <img src="/images/request.png" alt="">
                     <p class="text-white lg:text-left text-center font-bold text-2xl">RESPONSE DATA</p>
-                    <img src="/carbon.png"  alt="">
+                    <img src="/images/carbon.png"  alt="">
                    </div>
                 </div>
             </div>
@@ -43,7 +43,7 @@
             <div class="container rounded-sm mx-auto lg:flex">
                 <div class="lg:w-full">
                     <p class="text-blue-900 text-center text-xl mb-2">Supported Language Codes</p>
-                    <img src="/langcodes.png"  alt="">
+                    <img src="/images/langcodes.png"  alt="">
                 </div>
                 <div class="lg:w-1/2 text-blue-900 lg:ml-4">
                     <p class=" text-center text-xl  mb-2">Available End-Points</p>
