--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url('../world_map_dots.png');
+    background-image: url('../images/world_map_dots.png');
     
     font-family: 'Montserrat',  Arial, sans-serif;
     
