--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,600,700|Poppins:400,700&display=swap">
-    <title>APITranslate</title>
+    <title>LangTranslate</title>
 </head>
 <body class=" bg-blue-800 mx-auto">
     <header class="lg:flex ml-8 mt-4 lg:justify-between ">
-        <h1 class="text-white text-4xl ">apiTRANSLATE</h1>
+        <h1 class="text-white text-4xl ">langtranslate</h1>
         <!-- <nav class="mt-4 mr-20 px-4 text-center text-white">
             <a href="">Privacy Policy /</a>
             <a href="">License /</a>
@@ -50,9 +50,9 @@
                     <p class=" text-center text-xl  mb-2">Available End-Points</p>
                     <div class="px-4 py-4 rounded-lg lg:overflow-x-hidden overflow-x-scroll">
                         <p class="py-2">#Use this endpoint to translate from one language to another.</p>
-                        <p class="bg-black p-4 text-white">https://apitranslate.herokuapp.com/translate/text/from/to</p>
+                        <p class="bg-black p-4 text-white">https://langtranslate.herokuapp.com/translate/text/from/to</p>
                         <p class="py-2">#Use this endpoint to translate from any language to English.</p>
-                        <p class="bg-black p-4 text-white">https://apitranslate.herokuapp.com/translate/text</p>
+                        <p class="bg-black p-4 text-white">https://langtranslate.herokuapp.com/translate/text</p>
                     </div>
                 </div>
             </div>
@@ -61,7 +61,7 @@
     <footer>
         <div class="bg-blue-800 text-white text-xl p-4">
             <span>
-                &copy; <span class="date"></span> apiTranslate 
+                &copy; <span class="date"></span> langtranslate 
             </span>
             <span class="float-right mr-8">
                <span>Built with <i class="fas text-red-400 fa-heart"></i> by</span><a href="https://iamdyt.netlify.app"> iamdyt</a>
