--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 </head>
 <body class=" bg-blue-800 mx-auto">
     <header class="lg:flex ml-8 mt-4 lg:justify-between ">
-        <h1 class="text-white text-4xl ">langtranslate</h1>
+        <h1 class="text-white text-4xl ">Langtranslate</h1>
         <!-- <nav class="mt-4 mr-20 px-4 text-center text-white">
             <a href="">Privacy Policy /</a>
             <a href="">License /</a>
@@ -61,7 +61,7 @@
     <footer>
         <div class="bg-blue-800 text-white text-xl p-4">
             <span>
-                &copy; <span class="date"></span> langtranslate 
+                &copy; <span class="date"></span> Langtranslate. 
             </span>
             <span class="float-right mr-8">
                <span>Built with <i class="fas text-red-400 fa-heart"></i> by</span><a href="https://iamdyt.netlify.app"> iamdyt</a>
